--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,18 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="main-container">
+  <div class="landing-page-container">
+    <div class="nav-bar">
+      <div class="logo">
+        <div><%= cl_image_tag "icon_app_transp-01_wbb1xi.png", :width=>70, :crop=>"scale" %></div>
+        <h1>Pay 'n Go</h1>
+      </div>
+      <div class="btn-nav-bar"></div>
+    </div>
+    <div class="tittle">
+      <div><h1>Let's move forward</h1></div>
+      <div><h1>Let's pay cashless</h1></div>
+    </div>
+    <div class="subtitle">
+      <h2>Pay 'n Go is comming soon to you</h2>
+    </div>
+  </div>
+</div>
