--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,34 @@
 // Specific CSS for your home-page
+.landing-page-container{
+  color: white;
+  background-image: image-url('background-landing-page');
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  .nav-bar{
+    display:  flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 24px 60px;
+    h1{
+      font-weight: bolder;
+    }
+  }
+  .btn-nav-bar{
+    ul {
+      list-style: none;
+      display: flex;
+      margin-bottom: 0;
+      li{
+        margin-right: 70px;
+        font-size: 1.3rem;
+        text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
+      }
+    }
+  }
+  .logo {
+    img {
+      margin-right: 20px;
+    }
+  }
+}
