--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,18 +1,31 @@
 <div class="main-container">
-  <div class="landing-page-container">
+  <div class="landing-page-container" style="display: flex;flex-direction: column;justify-content: space-between;">
     <div class="nav-bar">
-      <div class="logo">
+      <div class="logo d-flex">
         <div><%= cl_image_tag "icon_app_transp-01_wbb1xi.png", :width=>70, :crop=>"scale" %></div>
-        <h1>Pay 'n Go</h1>
+        <h1 class="d-flex align-items-center">Pay 'n Go</h1>
       </div>
-      <div class="btn-nav-bar"></div>
+      <div class="btn-nav-bar">
+        <ul>
+          <li>How it works</li>
+          <li>Business</li>
+          <li>Stay tune</li>
+          <li>About us</li>
+          <li>Contact us</li>
+        </ul>
+      </div>
     </div>
-    <div class="tittle">
-      <div><h1>Let's move forward</h1></div>
-      <div><h1>Let's pay cashless</h1></div>
+    <div style="margin-bottom: 30em; margin-left: 70px;">
+      <div class="tittle">
+        <div><h1 style="font-weight: bold;">Let's move forward</h1></div>
+        <div><h1 style="font-weight: bold;">Let's pay cashless</h1></div>
+      </div>
+      <div class="subtitle">
+        <h2>Pay 'n Go is comming soon to you</h2>
+      </div>
     </div>
-    <div class="subtitle">
-      <h2>Pay 'n Go is comming soon to you</h2>
-    </div>
+  </div>
+  <div>
+    <h1>blabla</h1>
   </div>
 </div>
