--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,15 +17,15 @@
     </div>
     <div style="margin-bottom: 30em; margin-left: 70px;">
       <div class="tittle">
-        <div><h1 style="font-weight: bold;">Let's move forward</h1></div>
-        <div><h1 style="font-weight: bold;">Let's pay cashless</h1></div>
+        <div><h1 style="font-weight: bold; font-size: 3em">Let's move forward</h1></div>
+        <div><h1 style="font-weight: bold; font-size: 3em">Let's pay cashless</h1></div>
       </div>
       <div class="subtitle">
         <h2>Pay 'n Go is comming soon to you</h2>
       </div>
     </div>
   </div>
-  <div>
-    <h1>blabla</h1>
+  <div style="height: 100vh;">
+
   </div>
 </div>
