--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,7 +25,7 @@
       </div>
     </div>
   </div>
-  <div style="height: 100vh;">
-
+  <div style="height: 100vh;margin-top: 70px;">
+    <%= cl_image_tag "Untitled-1_hntvpt.png", alt: "alttext" %>
   </div>
 </div>
