--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -21,7 +21,7 @@
       margin-bottom: 0;
       li{
         margin-right: 70px;
-        font-size: 1.3rem;
+        font-size: 1rem;
         text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
       }
     }
@@ -29,6 +29,11 @@
   .logo {
     img {
       margin-right: 20px;
+    }
+  }
+  .image-phones{
+    img {
+      height: 800px;
     }
   }
 }
