background on why png

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -33,7 +33,7 @@
       <h1 style="text-align: center; margin-top: 70px; margin-bottom: 0;">Why Pay 'n Go?</h1>
     </div>
     <div class="underline"></div>
-    <div class="why-png-content d-flex justify-content-between align-items-center" style="padding: 140px;">
+    <div class="why-png-content d-flex justify-content-between align-items-center" style="padding: 70px 140px;">
       <div class="info-why-png d-flex align-items-center flex-column">
         <%= cl_image_tag "Easy_s3vz74.png", alt: "alttext", :width=>140, :crop=>"scale" %>
         <p style="width: 223px;text-align: center;">Easy-to-use & to implement to your commerce</p>
