--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -37,3 +37,9 @@
     }
   }
 }
+.why-png-container{
+  background-image: image-url('why3');
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
