--- a/app/views/pages/_info_app.html.erb
+++ b/app/views/pages/_info_app.html.erb
@@ -1,1 +1,9 @@
+<div class="info-app-main-container">
+  <div>
+    <h1 style="text-align: center; margin-top: 70px; margin-bottom: 0;">What you need is at your fingertips</h1>
+  </div>
+  <div>
+
+  </div>
+</div>
 
