cards info app aded

--- a/app/views/pages/_info_app.html.erb
+++ b/app/views/pages/_info_app.html.erb
@@ -2,8 +2,61 @@
   <div>
     <h1 style="text-align: center; margin-top: 70px; margin-bottom: 0;">What you need is at your fingertips</h1>
   </div>
-  <div>
 
+  <!-- card left -->
+  <div class="info-app-card d-flex">
+    <div class="info-app-card-picture-left">
+      <%= cl_image_tag "pexels-elevate-1267697_apemrm.jpg", :height=>497, :width=>625, :crop=>"fill", alt: "alttext" %>
+    </div>
+    <div class="info-app-card-text-left" style="background-color: #7957A5;">
+      <h1>REACH MORE CUSTOMERS AND GROW YOUR BUSINESS</h1>
+      <hr class="info-app-card-line-left">
+    </div>
   </div>
+
+  <!-- card right -->
+  <div class="info-app-card d-flex justify-content-end">
+    <div class="info-app-card-text-right" style="background-color: #4769B2;">
+      <h1>LET CUSTOMERS KNOW ABOUT YOUR OFFERS</h1>
+      <hr class="info-app-card-line-right">
+    </div>
+    <div class="info-app-card-picture-right">
+      <%= cl_image_tag "pexels-daria-shevtsova-1440727_fhclm6.jpg", :height=>497, :width=>625, :crop=>"fill", alt: "alttext" %>
+    </div>
+  </div>
+
+  <!-- card left -->
+  <div class="info-app-card d-flex">
+    <div class="info-app-card-picture-left">
+      <%= cl_image_tag "pexels-andrea-piacquadio-3772531_vdpcyc", :height=>497, :width=>625, :crop=>"fill", alt: "alttext" %>
+    </div>
+    <div class="info-app-card-text-left" style="background-color: #F2C720;">
+      <h1>LET PEOPLE KNOW WHERE YOU ARE LOCATED</h1>
+      <hr class="info-app-card-line-left">
+    </div>
+  </div>
+
+  <!-- card right -->
+  <div class="info-app-card d-flex justify-content-end">
+    <div class="info-app-card-text-right" style="background-color: #DE5732;">
+      <h1>ALLOW YOUR CUSTOMERSTO FORGET ABOUT CASH</h1>
+      <hr class="info-app-card-line-right">
+    </div>
+    <div class="info-app-card-picture-right">
+      <%= cl_image_tag "157f53d1-0001-0004-0000-000000553495_w1528_r1.4981273408239701_fpx34_fpy44.95_stmhxb", :height=>497, :width=>625, :crop=>"fill", alt: "alttext" %>
+    </div>
+  </div>
+
+  <!-- card left -->
+  <div class="info-app-card d-flex">
+    <div class="info-app-card-picture-left">
+      <%= cl_image_tag "v1600365020/Screen_Shot_2020-09-17_at_19.50.05_wzgy9i.png", :height=>497, :width=>625, :crop=>"fill", alt: "alttext" %>
+    </div>
+    <div class="info-app-card-text-left" style="background-color: #292929;">
+      <h1>RECEIVE MONEY IN SECODS</h1>
+      <hr class="info-app-card-line-left">
+    </div>
+  </div>
+
 </div>
 
