about us page started

--- a/app/views/pages/_info_app.html.erb
+++ b/app/views/pages/_info_app.html.erb
@@ -1,6 +1,6 @@
 <div class="info-app-main-container">
   <div>
-    <h1 style="text-align: center; margin-top: 70px; margin-bottom: 0;">What you need is at your fingertips</h1>
+    <h1 style="text-align: center; margin-top: 70px; margin-bottom: 70px;">What you need is at your fingertips</h1>
   </div>
 
   <!-- card left -->
