about us text and picture

--- a/app/views/pages/_about_us.html.erb
+++ b/app/views/pages/_about_us.html.erb
@@ -2,21 +2,18 @@
   <div>
     <h1 style="text-align: center; margin-top: 70px; margin-bottom: 70px;">About Us</h1>
   </div>
-  <div class="about-us-container d-flex justify-content-around align-items-center">
+  <div class="about-us-container d-flex justify-content-around align-items-start">
   <div class="about-us-content">
     <%= cl_image_tag "Me_jjnjkr.png", :gravity=>"face", :height=>288, :radius=>500, :width=>288, :x=>0, :crop=>"fill", alt: "alttext" %>
-    <p>Software Developer, Architect, entrepreneurial mind and greed for a good future,
-      Rodrigo moved to Europe with the ambition to develop his professional career.
-      With the goal and desire to create his own company and solve daily problems that would have a good impact on society,
-      Rodrigo found coding as his new direction that will led him to make real his ideas.
-    </p>
+    <p style="margin-top: 50px">Software Developer, Architect, and Entrepreneurial Mind with a belief in a better future.</p>
+    <p>Moved to Europe with a desire to create his own company that would have a positive impact on society.</p>
+    <p>Found coding as his new direction that will lead him to turn his ideas into reality.</p>
   </div>
   <div class="about-us-content">
     <%= cl_image_tag "Matt_p2zgzp.jpg", :radius=>500, :width=>288, :crop=>"fit", alt: "alttext" %>
-    <p>Software Developer, SEO marketer and Marketing Manager with experience working for start-ups and international companies.
-      Moved from London to Berlin and discovered THE problem.
-      As been raised in an entrepreneur family and learned from previous experiences decided to join Bootcamp to learn how to create a solution and build the app.
-    </p>
+    <p style="margin-top: 50px">Software Developer, SEO marketer and Marketing Manager with experience working for start-ups and international companies.</p>
+    <p>Moved from London to Berlin and discovered THE problem.</p>
+    <p>As been raised in an entrepreneur family and learned from previous experiences decided to join Bootcamp to learn how to create a solution and build the app.</p>
   </div>
   </div>
 </div>
