--- a/app/assets/stylesheets/pages/_about_us.scss
+++ b/app/assets/stylesheets/pages/_about_us.scss
@@ -1,3 +1,14 @@
 .about-us-content{
-
+  text-align: center;
+  width: 550px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  p{
+    width: 440px;
+  }
+  img{
+    border-radius: 50%;
+  }
 }
