--- a/app/views/pages/_info_app.html.erb
+++ b/app/views/pages/_info_app.html.erb
@@ -39,7 +39,7 @@
   <!-- card right -->
   <div class="info-app-card d-flex justify-content-end">
     <div class="info-app-card-text-right" style="background-color: #DE5732;">
-      <h1>ALLOW YOUR CUSTOMERSTO FORGET ABOUT CASH</h1>
+      <h1>ALLOW YOUR CUSTOMERS TO FORGET ABOUT CASH</h1>
       <hr class="info-app-card-line-right">
     </div>
     <div class="info-app-card-picture-right">
@@ -53,7 +53,7 @@
       <%= cl_image_tag "v1600365020/Screen_Shot_2020-09-17_at_19.50.05_wzgy9i.png", :height=>497, :width=>625, :crop=>"fill", alt: "alttext" %>
     </div>
     <div class="info-app-card-text-left" style="background-color: #292929;">
-      <h1>RECEIVE MONEY IN SECODS</h1>
+      <h1>GET YOUR MONEY  INSTANTLY</h1>
       <hr class="info-app-card-line-left">
     </div>
   </div>
