--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,7 +21,7 @@
         <div><h1 style="font-weight: bold; font-size: 2em">Let's pay cashless</h1></div>
       </div>
       <div class="subtitle">
-        <h2>Pay 'n Go is comming soon to you</h2>
+        <h2>Pay 'n Go is comming soon</h2>
       </div>
     </div>
   </div>
@@ -48,7 +48,7 @@
       </div>
       <div class="info-why-png d-flex align-items-center flex-column">
         <%= cl_image_tag "Suport_mpww1y.png", alt: "alttext", :width=>140, :crop=>"scale" %>
-        <p style="width: 200px;text-align: center;">We support you when you need us</p>
+        <p style="width: 200px;text-align: center;">We support you whenever you need us</p>
       </div>
     </div>
   </div>
