--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -20,7 +20,7 @@
       display: flex;
       margin-bottom: 0;
       li{
-        margin-right: 70px;
+        margin-right: 50px;
         font-size: 1rem;
         text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
       }
@@ -31,9 +31,24 @@
       margin-right: 20px;
     }
   }
-  .image-phones{
-    img {
-      height: 800px;
+}
+.image-phones{
+  height: 1080px;
+  width: 100%;
+  background-image: image-url('phones');
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  flex-direction: column;
+  .image-phones-text{
+    margin-bottom: 240px;
+    margin-right:100px;
+    h1{
+      color: white;
+      font-weight: bolder;
     }
   }
 }
