--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,26 +7,32 @@
       </div>
       <div class="btn-nav-bar">
         <ul>
-          <li>How it works</li>
+          <li>Why Pay 'n Go ?</li>
           <li>Business</li>
-          <li>Stay tune</li>
+          <li>How it works</li>
           <li>About us</li>
           <li>Contact us</li>
         </ul>
       </div>
     </div>
-    <div style="margin-bottom: 24em; margin-left: 70px;">
+    <div style="margin-bottom: 22em; margin-left: 70px;">
       <div class="tittle">
-        <div><h1 style="font-weight: bold; font-size: 2em">Let's move forward</h1></div>
-        <div><h1 style="font-weight: bold; font-size: 2em">Let's pay cashless</h1></div>
+        <div><h1 style="font-weight: bold; font-size: 2.7em; text-shadow: 2px 2px 4px rgba(0,0,0,0.3)">Let's move forward</h1></div>
+        <div><h1 style="font-weight: bold; font-size: 2.7em; text-shadow: 2px 2px 4px rgba(0,0,0,0.3)">Let's pay cashless</h1></div>
       </div>
       <div class="subtitle">
-        <h2>Pay 'n Go is comming soon</h2>
+        <h2 style="text-shadow: 1px 1px 4px rgba(0,0,0,0.3); font-size: 2em;">Pay 'n Go is comming soon</h2>
       </div>
     </div>
   </div>
-  <div class="image-phones" style="height: 100vh;margin-top: 70px; margin-bottom: 140px">
-    <%= cl_image_tag "Untitled-1_hntvpt.png", alt: "alttext", :height=>800, :crop=>"scale" %>
+  <div class="image-phones">
+    <div class="image-phones-text">
+      <h1>Pay cashless in Berlin</h1>
+      <h4>wether in</h4>
+      <p>Späti</p>
+      <p>Flea market</p>
+      <p>Your favorite restaurant</p>
+    </div>
   </div>
   <div class="why-png-container" style="height: 100vh;margin-bottom: 70px">
     <div class="why-png-tittle">
