--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -28,10 +28,25 @@
   <div class="image-phones">
     <div class="image-phones-text">
       <h1>Pay cashless in Berlin</h1>
-      <h4>wether in</h4>
-      <p>Späti</p>
-      <p>Flea market</p>
-      <p>Your favorite restaurant</p>
+      <h4>wether in:</h4>
+      <div class="phone-items">
+        <div class="round-item">
+          <i class="fas fa-shopping-basket"></i>
+        </div>
+        <p>Späti</p>
+      </div>
+      <div class="phone-items">
+        <div class="round-item">
+          <i class="fas fa-store"></i>
+        </div>
+        <p>Flea market</p>
+      </div>
+      <div class="phone-items">
+        <div class="round-item">
+          <i class="fas fa-pizza-slice"></i>
+        </div>
+        <p>Your favorite restaurant</p>
+      </div>
     </div>
   </div>
   <div class="why-png-container" style="height: 100vh;margin-bottom: 70px">
