--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -28,7 +28,7 @@
   <div class="image-phones">
     <div class="image-phones-text">
       <h1>Pay cashless in Berlin</h1>
-      <h4>wether in:</h4>
+      <h4 style="margin-bottom: 50px;">wether in:</h4>
       <div class="phone-items">
         <div class="round-item">
           <i class="fas fa-shopping-basket"></i>
@@ -49,9 +49,9 @@
       </div>
     </div>
   </div>
-  <div class="why-png-container" style="height: 100vh;margin-bottom: 70px">
+  <div class="why-png-container" style="height: 100vh;margin-bottom: 40px">
     <div class="why-png-tittle">
-      <h1 style="text-align: center; margin-top: 70px; margin-bottom: 0;">Why Pay 'n Go?</h1>
+      <h1 style="text-align: center; margin-bottom: 0;">Why Pay 'n Go?</h1>
     </div>
     <div class="underline"></div>
     <div class="why-png-content" style="padding: 70px">
@@ -73,6 +73,7 @@
       </div>
     </div>
   </div>
+  <%= render partial: 'how_it_works' %>
   <%= render partial: 'info_app' %>
   <%= render partial: 'about_us' %>
   <%= render partial: 'footer' %>
