--- a/app/assets/stylesheets/pages/_how_it_works.scss
+++ b/app/assets/stylesheets/pages/_how_it_works.scss
@@ -20,6 +20,11 @@
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
+    transition: 0.35s;
+    &:hover{
+      height: 420px;
+      width: 250px;
+    }
   }
 
   .second-hiw{
@@ -29,6 +34,11 @@
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
+    transition: 0.35s;
+    &:hover{
+      height: 420px;
+      width: 250px;
+    }
   }
 
 
@@ -39,6 +49,11 @@
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
+    transition: 0.35s;
+    &:hover{
+      height: 420px;
+      width: 250px;
+    }
   }
 
 
@@ -49,6 +64,11 @@
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
+    transition: 0.35s;
+    &:hover{
+      height: 420px;
+      width: 250px;
+    }
   }
 }
 
