--- a/app/views/pages/_about_us.html.erb
+++ b/app/views/pages/_about_us.html.erb
@@ -1,4 +1,4 @@
-<div class="about-us-main-container">
+<div id="about-us" class="about-us-main-container">
   <div>
     <h1 style="text-align: center; margin-top: 70px; margin-bottom: 70px;">About Us</h1>
   </div>
