--- a/app/views/pages/_how_it_works.html.erb
+++ b/app/views/pages/_how_it_works.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div id="hiw">
   <h1 style="text-align: center; margin-top: 70px; margin-bottom: 70px;">How it works?</h1>
 </div>
 <div class="hiw-container d-flex justify-content-around">
