--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,4 +1,8 @@
 // Specific CSS for your home-page
+html {
+  scroll-behavior: smooth;
+}
+
 .landing-page-container{
   color: white;
   background-image: image-url('background-landing-page');
@@ -23,6 +27,10 @@
         margin-right: 50px;
         font-size: 1rem;
         text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
+        a{
+          color: white;
+          text-decoration: none;
+        }
       }
     }
   }
