--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,11 +7,11 @@
       </div>
       <div class="btn-nav-bar">
         <ul>
-          <li>Why Pay 'n Go ?</li>
-          <li>Business</li>
-          <li>How it works</li>
-          <li>About us</li>
-          <li>Contact us</li>
+          <li><a href="#why-png">Why Pay 'n Go ?</a></li>
+          <li><a href="#info-app">Business</a></li>
+          <li><a href="#hiw">How it works</a></li>
+          <li><a href="#about-us">About us</a></li>
+          <li><a href="#contact-us">Contact us</a></li>
         </ul>
       </div>
     </div>
@@ -49,7 +49,7 @@
       </div>
     </div>
   </div>
-  <div class="why-png-container" style="height: 100vh;margin-bottom: 40px">
+  <div id="why-png" class="why-png-container" style="height: 100vh;margin-bottom: 40px">
     <div class="why-png-tittle">
       <h1 style="text-align: center; margin-bottom: 0;">Why Pay 'n Go?</h1>
     </div>
