hp with title and nav bar sticky

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -14,9 +14,15 @@ html {
     justify-content: space-between;
     align-items: center;
     padding: 24px 60px;
+    position: fixed;
+    top: 0;
+    width: 100vw;
     h1{
       font-weight: bolder;
     }
+  }
+  .title-hp{
+    margin: 160px 0 0 70px;
   }
   .btn-nav-bar{
     ul {
