--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,10 +15,10 @@
         </ul>
       </div>
     </div>
-    <div style="margin-bottom: 22em; margin-left: 70px;">
+    <div class="title-hp">
       <div class="tittle">
-        <div><h1 style="font-weight: bold; font-size: 2.7em; text-shadow: 2px 2px 4px rgba(0,0,0,0.3)">Let's move forward</h1></div>
-        <div><h1 style="font-weight: bold; font-size: 2.7em; text-shadow: 2px 2px 4px rgba(0,0,0,0.3)">Let's pay cashless</h1></div>
+        <div><h1 style="font-weight: bold; font-size: 3.2em; text-shadow: 2px 2px 4px rgba(0,0,0,0.3)">Let's move forward</h1></div>
+        <div><h1 style="font-weight: bold; font-size: 3.2em; text-shadow: 2px 2px 4px rgba(0,0,0,0.3)">Let's pay cashless</h1></div>
       </div>
       <div class="subtitle">
         <h2 style="text-shadow: 1px 1px 4px rgba(0,0,0,0.3); font-size: 2em;">Pay 'n Go is comming soon</h2>
