titles move a bit down

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -97,6 +97,7 @@ html {
   }
 }
 .why-png-container{
+  padding-top: 100px;
   background-image: image-url('why3');
   background-size: contain;
   background-position: center;
