--- a/app/views/pages/_about_us.html.erb
+++ b/app/views/pages/_about_us.html.erb
@@ -1,6 +1,6 @@
 <div id="about-us" class="about-us-main-container">
   <div>
-    <h1 style="text-align: center; margin-top: 70px; margin-bottom: 70px;">About Us</h1>
+    <h1 style="text-align: center; margin-top: 70px; margin-bottom: 70px;padding-top: 120px">About Us</h1>
   </div>
   <div class="about-us-container d-flex justify-content-around align-items-start">
   <div class="about-us-content">
