margin info app ficed

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -63,8 +63,7 @@ html {
   align-items: end;
   flex-direction: column;
   .image-phones-text{
-    margin-bottom: 240px;
-    margin-right:100px;
+    margin-left: 56%;
     h1, h4{
       color: white;
       font-weight: bolder;
