--- a/app/views/pages/_how_it_works.html.erb
+++ b/app/views/pages/_how_it_works.html.erb
@@ -12,10 +12,10 @@
   </div>
   <div class="hiw-card">
     <div class="third-hiw"></div>
-    <p>Search for chaslless points near you</p>
+    <p>Search for cashlless places near you</p>
   </div>
   <div class="hiw-card">
     <div class="fouth-hiw"></div>
-    <p>Start to scan and forget about cash or ATMs</p>
+    <p>Scan QR code and forget about cash or ATMs</p>
   </div>
 </div>
