--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -59,6 +59,7 @@ html {
   background-position: center;
   background-repeat: no-repeat;
   .image-phones-text{
+    width: 500px;
     position: relative;
     left: 60%;
     top: 26%;
