--- a/app/views/pages/_footer.html.erb
+++ b/app/views/pages/_footer.html.erb
@@ -9,3 +9,8 @@
     <p>© Pay 'n Go 2020</p>
   </div>
 </div>
+
+<div class="contact-us">
+  <p>E-mail us here:</p>
+  <p>contact@pay-ngo.de</p>
+</div>
