--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,10 +8,10 @@
       <div class="btn-nav-bar">
         <ul>
           <li><a href="#why-png">Why Pay 'n Go ?</a></li>
-          <li><a href="#info-app">Business</a></li>
           <li><a href="#hiw">How it works</a></li>
+          <li><a href="#info-app">Business</a></li>
           <li><a href="#about-us">About us</a></li>
-          <li><a href="#contact-us">Contact us</a></li>
+          <li><a href="#">Back to top</a></li>
         </ul>
       </div>
     </div>
