--- a/app/views/pages/_footer.html.erb
+++ b/app/views/pages/_footer.html.erb
@@ -1,16 +1,11 @@
 <div class="footer-container">
   <div class="footer-btns-left">
     <ul>
-      <li>Help & Contact</li>
+      <li id="contact">Help & Contact</li>
       <li>Invest in Pay 'n Go</li>
     </ul>
   </div>
   <div>
     <p>© Pay 'n Go 2020</p>
   </div>
-</div>
-
-<div class="contact-us">
-  <p>E-mail us here:</p>
-  <p>contact@pay-ngo.de</p>
 </div>
