--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
       <div style="display: flex;align-items: center;justify-content: space-between;width: 100%;">
         <div class="logo d-flex">
           <div><%= cl_image_tag "icon_app_transp-01_wbb1xi.png", :width=>70, :crop=>"scale" %></div>
-          <h1 class="d-flex align-items-center" style="font-size: 2em;">Pay 'n Go</h1>
+          <h1 class="d-flex align-items-center" style="font-size: 2em;"><a href="#" style="text-decoration: none; color:white;">Pay 'n Go</a></h1>
         </div>
         <div class="btn-nav-bar">
           <ul>
