--- a/app/views/pages/_footer.html.erb
+++ b/app/views/pages/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="footer-container">
   <div class="footer-btns-left">
     <ul>
-      <li id="contact">Help & Contact</li>
+      <li id="contact" style="cursor: pointer;">Help & Contact</li>
       <li>Invest in Pay 'n Go</li>
     </ul>
   </div>
