--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -39,7 +39,7 @@
   <div class="image-phones">
     <div class="image-phones-text">
       <h1>Pay cashless in Berlin</h1>
-      <h4 style="margin-bottom: 50px;">whether in:</h4>
+      <h4 style="margin-bottom: 50px;">whether it's:</h4>
       <div class="phone-items">
         <div class="round-item">
           <i class="fas fa-shopping-basket"></i>
